moved footer message to closure area in core, corrected spacing problem in navbar on corporate and added padding to closure

--- a/corporate/css/corporate.css
+++ b/corporate/css/corporate.css
@@ -123,6 +123,7 @@ border-top: 3px solid #000;
 
 #navigation .section {
     background-color: transparent;
+    line-height: 0.83em;
 }
 
 #sitecontent-wrapper {
