--- a/css/html-reset.css
+++ b/css/html-reset.css
@@ -280,6 +280,7 @@ font-size: 90%;
 #closure {
 font-size: 70%;
 text-align: center;
+padding: 0.5em 0;
 }
 
 /*4
