--- a/css/layout-fixed.css
+++ b/css/layout-fixed.css
@@ -779,7 +779,7 @@ border-right:2px solid;
 float:left;
 margin:15px -210px 15px 0;
 padding:0;
-width:230px;
+width:210px;
 height: 80%
 }
 
